# Thinkus

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT-PLAN.md  DEVELOPMENT_PROGRESS.md  Makefile  docker-compose.dev.yml  docker-compose.yml
services/py-ai-engine/: Dockerfile  Dockerfile.dev  evaluation_report.json  pyproject.toml  requirements.txt  start.sh  test_david.json  test_request.json
services/py-ai-engine/src/: grpc_server.py  main.py
services/py-ai-engine/src/employees/: __init__.py  base.py  david_tech.py  elena_ux.py  frank_devops.py  grace_security.py  henry_mobile.py  ivan_ai.py  jack_architect.py  james_legal.py  kevin_qa.py  librarian.py  lisa_data.py  marcus_cmo.py  mike_pm.py  nancy_sales.py  oscar_bd.py  paul_pr.py  quinn_ops.py  sarah_cfo.py
services/py-ai-engine/src/memory/: __init__.py  budget.py  cache.py  chain.py  compressor.py  corrector.py  decay.py  deduplicator.py  injector.py  maintenance.py  manager.py  merger.py  metrics.py  models.py  retriever.py  scheduler.py  scorer.py  shared.py  summarizer.py  (+1 more)
services/py-ai-engine/tests/: __init__.py  conftest.py  test_cache.py  test_corrector.py  test_deduplicator.py  test_manager.py  test_models.py  test_retriever.py  test_scorer.py  test_shared.py  test_tier_adjuster.py
services/py-service/: Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
services/py-service/src/: __init__.py  grpc_server.py  main.py
services/py-service/tests/: __init__.py  conftest.py  test_document_processor.py  test_experience_service.py  test_growth_advisor.py  test_requirement_integrator.py
(+803 files in other folders)
