[project]
name = "thinkus-py-service"
version = "1.0.0"
description = "Thinkus Python Microservice - Document Processing, AI Analysis"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
